--- a/docs/docs-ref-autogen/excel/excel/excel.shapetexthorizontalalignment.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.shapetexthorizontalalignment.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ShapeTextHorizontalAlignment:enum'
     summary: |-
-      <span data-ttu-id="a5821-101">指定形状中的文本框架的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="a5821-101">Specifies the horizontal alignment for the text frame in a shape.</span></span>
+      指定形状中的文本框架的水平对齐方式。
 
-      <span data-ttu-id="a5821-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a5821-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeTextHorizontalAlignment
     fullName: Excel.ShapeTextHorizontalAlignment
     langs:
