--- a/docs/docs-ref-autogen/excel/excel/excel.shapetextorientation.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.shapetextorientation.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ShapeTextOrientation:enum'
     summary: |-
-      <span data-ttu-id="cdc79-101">指定形状中的文本框架的方向。</span><span class="sxs-lookup"><span data-stu-id="cdc79-101">Specifies the orientation for the text frame in a shape.</span></span>
+      指定形状中的文本框架的方向。
 
-      <span data-ttu-id="cdc79-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cdc79-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeTextOrientation
     fullName: Excel.ShapeTextOrientation
     langs:
