--- a/docs/docs-ref-autogen/excel/excel/excel.shapetextreadingorder.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.shapetextreadingorder.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ShapeTextReadingOrder:enum'
     summary: |-
-      <span data-ttu-id="6e6c4-101">指定形状中的文本框架的阅读顺序。</span><span class="sxs-lookup"><span data-stu-id="6e6c4-101">Specifies the reading order for the text frame in a shape.</span></span>
+      指定形状中的文本框架的阅读顺序。
 
-      <span data-ttu-id="6e6c4-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6e6c4-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeTextReadingOrder
     fullName: Excel.ShapeTextReadingOrder
     langs:
