--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartaxisticklabelposition.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartaxisticklabelposition.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.ChartAxisTickLabelPosition:enum'
-    summary: '<span data-ttu-id="f7225-101">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f7225-101">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.ChartAxisTickLabelPosition
     fullName: Excel.ChartAxisTickLabelPosition
     langs:
