--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphcollectiondata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphcollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphCollectionData:interface'
-    summary: <span data-ttu-id="2d628-101">描述通过调用 "inkAnalysisParagraphCollection （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2d628-101">An interface describing the data returned by calling "inkAnalysisParagraphCollection.toJSON()".</span></span>
+    summary: 描述通过调用 "inkAnalysisParagraphCollection （）" 返回的数据的接口。
     name: OneNote.Interfaces.InkAnalysisParagraphCollectionData
     fullName: OneNote.Interfaces.InkAnalysisParagraphCollectionData
     langs:
