--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="976ce-101">表示 InkAnalysisParagraph 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="976ce-101">Represents a collection of InkAnalysisParagraph objects.</span></span>
+      表示 InkAnalysisParagraph 对象的集合。
 
-      <span data-ttu-id="976ce-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="976ce-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.Interfaces.InkAnalysisParagraphCollectionLoadOptions
     fullName: OneNote.Interfaces.InkAnalysisParagraphCollectionLoadOptions
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="976ce-103">对于集合中的每一项：获取 InkAnalysisParagraph 对象的 ID。</span><span class="sxs-lookup"><span data-stu-id="976ce-103">For EACH ITEM in the collection: Gets the ID of the InkAnalysisParagraph object.</span></span> <span data-ttu-id="976ce-104">只读。</span><span class="sxs-lookup"><span data-stu-id="976ce-104">Read-only.</span></span>
+      对于集合中的每一项：获取 InkAnalysisParagraph 对象的 ID。 只读。
 
-      <span data-ttu-id="976ce-105">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="976ce-105">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphCollectionLoadOptions#inkAnalysis:member'
     summary: |-
-      <span data-ttu-id="976ce-106">对于集合中的每个项目：对父 InkAnalysisPage 的引用。</span><span class="sxs-lookup"><span data-stu-id="976ce-106">For EACH ITEM in the collection: Reference to the parent InkAnalysisPage.</span></span>
+      对于集合中的每个项目：对父 InkAnalysisPage 的引用。
 
-      <span data-ttu-id="976ce-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="976ce-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: inkAnalysis
     fullName: inkAnalysis
     langs:
@@ -59,9 +59,9 @@ items:
           - 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions:interface'
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphCollectionLoadOptions#lines:member'
     summary: |-
-      <span data-ttu-id="976ce-108">对于集合中的每一项：获取此墨迹分析段落中的墨迹分析行。</span><span class="sxs-lookup"><span data-stu-id="976ce-108">For EACH ITEM in the collection: Gets the ink analysis lines in this ink analysis paragraph.</span></span>
+      对于集合中的每一项：获取此墨迹分析段落中的墨迹分析行。
 
-      <span data-ttu-id="976ce-109">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="976ce-109">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: lines
     fullName: lines
     langs:
