--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="e1fcc-101">一个用于更新 InkAnalysisParagraphCollection 对象上的数据的接口，可用于 "inkAnalysisParagraphCollection （</span><span class="sxs-lookup"><span data-stu-id="e1fcc-101">An interface for updating data on the InkAnalysisParagraphCollection object, for use in "inkAnalysisParagraphCollection.set(</span></span><!-- --><span data-ttu-id="e1fcc-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="e1fcc-102"></span></span><!-- --><span data-ttu-id="e1fcc-103">)".</span><span class="sxs-lookup"><span data-stu-id="e1fcc-103"></span></span>'
+    summary: '一个用于更新 InkAnalysisParagraphCollection 对象上的数据的接口，可用于 "inkAnalysisParagraphCollection （<!-- -->{ ... }<!-- -->)".'
     name: OneNote.Interfaces.InkAnalysisParagraphCollectionUpdateData
     fullName: OneNote.Interfaces.InkAnalysisParagraphCollectionUpdateData
     langs:
