--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphData:interface'
-    summary: <span data-ttu-id="24133-101">描述通过调用 "inkAnalysisParagraph （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="24133-101">An interface describing the data returned by calling "inkAnalysisParagraph.toJSON()".</span></span>
+    summary: 描述通过调用 "inkAnalysisParagraph （）" 返回的数据的接口。
     name: OneNote.Interfaces.InkAnalysisParagraphData
     fullName: OneNote.Interfaces.InkAnalysisParagraphData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'onenote!OneNote.Interfaces.InkAnalysisParagraphData#lines:member'
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphData#id:member'
     summary: |-
-      <span data-ttu-id="24133-102">获取 InkAnalysisParagraph 对象的 ID。</span><span class="sxs-lookup"><span data-stu-id="24133-102">Gets the ID of the InkAnalysisParagraph object.</span></span> <span data-ttu-id="24133-103">只读。</span><span class="sxs-lookup"><span data-stu-id="24133-103">Read-only.</span></span>
+      获取 InkAnalysisParagraph 对象的 ID。 只读。
 
-      <span data-ttu-id="24133-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="24133-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphData#inkAnalysis:member'
     summary: |-
-      <span data-ttu-id="24133-105">对父级 InkAnalysisPage 的引用。</span><span class="sxs-lookup"><span data-stu-id="24133-105">Reference to the parent InkAnalysisPage.</span></span> <span data-ttu-id="24133-106">只读。</span><span class="sxs-lookup"><span data-stu-id="24133-106">Read-only.</span></span>
+      对父级 InkAnalysisPage 的引用。 只读。
 
-      <span data-ttu-id="24133-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="24133-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: inkAnalysis
     fullName: inkAnalysis
     langs:
@@ -44,9 +44,9 @@ items:
           - 'onenote!OneNote.Interfaces.InkAnalysisData:interface'
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphData#lines:member'
     summary: |-
-      <span data-ttu-id="24133-108">获取此墨迹分析段落中的墨迹分析行。</span><span class="sxs-lookup"><span data-stu-id="24133-108">Gets the ink analysis lines in this ink analysis paragraph.</span></span> <span data-ttu-id="24133-109">只读。</span><span class="sxs-lookup"><span data-stu-id="24133-109">Read-only.</span></span>
+      获取此墨迹分析段落中的墨迹分析行。 只读。
 
-      <span data-ttu-id="24133-110">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="24133-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: lines
     fullName: lines
     langs:
